--- a/dropin/views/pending.handlebars
+++ b/dropin/views/pending.handlebars
@@ -6,7 +6,7 @@
 
     <img src="/images/thank-you.svg" class="status-image" alt="">
 
-    <p class="status-message">Your order has been received! Payment completion pending.</p>
+    <p class="status-message">Your order has been received! You will receive a confirmation email soon.</p>
     <a class="button" href="/" to="#/">Return Home</a>
   </div>
 </div>
