--- a/dropin/views/success.handlebars
+++ b/dropin/views/success.handlebars
@@ -3,10 +3,8 @@
 <div class="status-container">
   <div class="status">
     <img src="/images/success.svg" class="status-image" alt="">
-
-    <img src="/images/thank-you.svg" class="status-image" alt="">
-
-    <p class="status-message">Your order has been successfully placed.</p>
+    <br />
+    <p class="status-message">Thank you! Your order has been successfully placed.</p>
     <a class="button" href="/" to="#/">Return Home</a>
   </div>
 </div>
